Fix bug with jQuery UI dialogs appearing behind the editor. #109

--- a/src/themes/inc/defaultbase.less
+++ b/src/themes/inc/defaultbase.less
@@ -31,9 +31,8 @@ div.sceditor-dropdown div
 {
 	padding: 0;
 	margin: 0;
-	z-index: 1003;
+	z-index: 3;
 }
-
 	.sceditor-container iframe,
 	.sceditor-container textarea
 	{
@@ -56,7 +55,7 @@ div.sceditor-dropdown div
 		background: #000;
 		width: 100%;
 		height: 100%;
-		z-index: 1010;
+		z-index: 10;
 		opacity: 0.3;
 	}
 
@@ -83,7 +82,7 @@ div.sceditor-dropdown div
 		position: absolute;
 		bottom: 0;
 		right: 0;
-		z-index: 1003;
+		z-index: 3;
 	}
 
 	.sceditor-maximize
@@ -94,7 +93,7 @@ div.sceditor-dropdown div
 		height: 100% !important;
 		width: 100% !important;
 		.rounded(0);
-		z-index: 1004;
+		z-index: 2000;
 	}
 
 	// Used for IE 6 as it has no position fixed support
@@ -137,7 +136,7 @@ div.sceditor-dropdown div
 		border: 1px solid #ccc;
 		background: #fff;
 		color: #333;
-		z-index: 1006;
+		z-index: 4000;
 		padding: 10px;
 
 		.rounded(2px);
